First version of plugin avaiable for the public
Includes:
- Readme
- Configuration
- Api's for initialization, logout, card settings and starting payments
- Both Android and IOS implementations

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr" class="hydrated">
   <head>
     <meta charset="UTF-8" />
-    <title>Example Capacitor App</title>
+    <title>Example Zettle application</title>
     <meta
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -11,14 +11,35 @@
   </head>
   <body>
     <main>
-      <h1>Capacitor Test Plugin Project</h1>
+      <h1>@globy/zettle testing application</h1>
       <p>
-        This project can be used to test out the functionality of your plugin. Nothing in the <em>example/</em> folder
-        will be published to npm when using this template, so you can create away!
+        This project can be used to test out the functionality of the
+        <em>@globy/capacitor-zettle</em> plugin.
       </p>
-      <label for="echoInput">Echo Text:</label>
-      <input type="text" id="echoInput" name="echoInput" value="Hello World!" />
-      <button onclick="testEcho()">Click Me!</button>
+
+      <button onclick="testInitialize(true)">
+        <em>testInitialize(true)</em>
+      </button>
+      <br />
+      <br />
+
+      <button onclick="testInitialize(false)">
+        <em>testInitialize(false)</em>
+      </button>
+      <br />
+      <br />
+      <button onclick="testLogout()"><em>testLogout()</em></button>
+      <br />
+      <br />
+      <button onclick="testSettings()"><em>testSettings()</em></button>
+      <br />
+      <br />
+      <label for="paymentInput">Payment amount:</label>
+      <input type="text" id="paymentInput" name="paymentInput" value="10" />
+      <button onclick="testPayment()"><em>payment()</em></button>
+
+      <br />
+      <p id="paymentOutput"></p>
     </main>
 
     <script src="./js/example.js" type="module"></script>
